# zork-termux

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  smoke.yml
data/blockers/: zork1_core_path.json
data/i18n/: en.json  es.json  it.json
docs/: PLAYABLE_BETA_CHECKLIST.md  RELEASE_NOTES_PLAYABLE_BETA_DRAFT.md  RELEASE_NOTES_v0.5.0.md  TECHNICAL_REFERENCE.md
npm/zork-termux/: README.md  check-update.js  install.js  package.json
npm/zork-termux/prebuilt/: README.md
scripts/: ci_smoke.sh  corepath_smoke.sh  data_alignment_gate.py  release_preflight.sh  smoke_all_languages.sh
src/: lib.rs  logging.rs  main.rs
src/data/: mod.rs  zork1.rs  zork2.rs  zork3.rs
src/game/: actions.rs  mod.rs  state.rs  world.rs  zork1_world.rs  zork2_world.rs  zork3_world.rs
src/i18n/: loader.rs  mod.rs
src/parser/: command.rs  mod.rs
tools/: report_i18n_alignment.sh
