[package]
name = "zork-termux"
version = "0.5.0"
edition = "2024"
authors = ["DioNanos <noreply@github.com>"]
license = "MIT"
description = "Multi-language Zork I, II, III recreation in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
